fix blacklisted and install icons align

--- a/ota-plus-web/app/reactapp/css/pages.scss
+++ b/ota-plus-web/app/reactapp/css/pages.scss
@@ -1037,6 +1037,7 @@
                                 .blacklisted, .installed, .blacklisted-installed {
                                     display: inline-block;
                                     padding: 10px 0;
+                                    margin: 0 12px;
 
                                     img {
                                         width: 25px;
